2000-08-13 06:55 GMT + 1 Antonio Linares <alinares@fivetech.com>
   * source/vm/mainwin.c
     Enhanced so it now process command line arguments.
     (bug reported by Patrick Mast)

2000-08-12 20:20 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
*doc/en/compiler.txt
 doc/en/harbext.txt
 doc/en/var.txt
 doc/en/file.txt
 doc/en/hvm.txt
 doc/en/math.txt
 doc/en/subcodes.txt
    *Small formating
     Correct the case of some categories
+doc/en/cmdline.txt
    *Formated as an hbdoc source.
*doc/genhtm.rsp
 +added cmdline.txt to response file
*utils/hbdoc/genhtm.prg
 utils/hbdoc/genchm.prg
    *Fixed an small Bug
*utils/hbdoc/hbdoc.prg
 utils/hbdoc/genrtf.prg
 utils/hbdoc/rtf.prg
    *Added code to generate the Winhelp .cnt file dinanmicall,So every time
     the doc is updated , the winhelp.cnt file will also be updated.



Changelog: 2000-08-12 20:00 UTC+0500 April White <awhite@user.rose.com>
   disregard my: 2000-07-29 03:00 UTC+0500
   TODO: remove the old hb*.txt files from doc/en
   * doc/en/
     + hb_api.txt hb_apier.txt hb_apifs.txt hb_apigt.txt hb_apiit.txt
     + hb_apiln.txt hb_apird.txt hb_compa.txt hb_date.txt hb_macro.txt
     + hb_set.txt hb_vm.txt
   * doc/genhtm.rsp
     + added references to the above

2000-08-12 15:20 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/pp/ppcode.c
        * fixed '\`' into '`' to stop warning in GCC

    *source/compiler/harbour.l
        * fixed handling of TEXT/ENDTEXT - it is not active now
        'if( 0 )' since it requires more support from the preprocessor.
        The preprocessor have to set some flag when text block is
        processed to suppres errorneous compilation if normal
        (not preprocessed) code in case of:
        QOUT([some]) ; QOUT([string])
        * added support for nested '[]' string delimiters that can
        be created by the preprocessor
        * fixed handling of 'FOR(' syntax - it is now fully
        Clipper compatible.

    *source/compiler/harbour.y