@@ -3485,7 +3485,8 @@ HB_FUNC( DBSETRELATION )
       LPAREANODE s_pArea = NULL, pAreaNode;
       USHORT uiChildArea;
 
-      if( hb_pcount() < 2 || ( !( hb_parinfo( 1 ) & HB_IT_NUMERIC ) && ( hb_parinfo( 1 ) != HB_IT_STRING ) ) )
+      if( hb_pcount() < 2 || ( !( hb_parinfo( 1 ) & HB_IT_NUMERIC ) && ( hb_parinfo( 1 ) != HB_IT_STRING ) ) || 
+          ( hb_pcount() > 3 && !( hb_parinfo( 4 ) & HB_IT_LOGICAL ) ) )
       {
          hb_errRT_DBCMD( EG_ARG, 1006, NULL, "DBSETRELATION" );
          return;
@@ -3523,6 +3524,7 @@ HB_FUNC( DBSETRELATION )
       dbRelations.lpaChild = ( AREAP ) s_pArea->pArea;
       dbRelations.itmCobExpr = hb_param( 2, HB_IT_BLOCK );
       dbRelations.abKey = hb_param( 3, HB_IT_STRING );
+      dbRelations.isScoped = ( hb_pcount() > 3 )? hb_parl( 4 ):0;
       dbRelations.lpdbriNext = NULL;
 
       SELF_SETREL( ( AREAP ) s_pCurrArea->pArea, (LPDBOPENINFO) &dbRelations );
